welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:2: error: not found: value int
  int l = nums.lenght
  ^arrayCount9:4: error: not found: value l
  for (i <- 0 to l){
                 ^arrayCount9:5: error: not found: value nums
    if(nums(i)==9){
       ^arrayCount9:6: error: return outside method definition
      return true
      ^arrayCount9:8: error: return outside method definition
    return false
    ^